tests/ui/queue_slot_lifetime_too_small.stderr
error[E0597]: `slots` does not live long enough
  --> tests/ui/queue_slot_lifetime_too_small.rs:14:35
   |
13 |     let mut slots = [const { MyElem::new() }; 5];
   |         --------- binding `slots` declared here
14 |     Queue::create(queue.as_ref(), &mut slots, &Default::default()).unwrap();
   |                                   ^^^^^^^^^^ borrowed value does not live long enough
15 | }
   | -
   | |
   | `slots` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `QueueContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0597]: `lower` does not live long enough
  --> tests/ui/queue_slot_lifetime_too_small.rs:28:35
   |
25 |     let mut lower = [const { MyElem::new() }; 5];
   |         --------- binding `lower` declared here
...
28 |     Queue::create(queue.as_ref(), &mut lower, &Default::default()).unwrap(); // ERROR: lower lifetime less than queue.
   |                                   ^^^^^^^^^^ borrowed value does not live long enough
29 | }
   | -
   | |
   | `lower` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `QueueContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0597]: `lower` does not live long enough
  --> tests/ui/queue_slot_lifetime_too_small.rs:41:35
   |
39 |     let mut lower = [const { MyElem::new() }; 5];
   |         --------- binding `lower` declared here
40 |
41 |     Queue::create(queue.as_ref(), &mut lower, &Default::default()).unwrap(); // ERROR: lower lifetime less than queue.
   |                                   ^^^^^^^^^^ borrowed value does not live long enough
42 |     Queue::create(queue.as_ref(), &mut upper, &Default::default()).unwrap(); // OK: upper lifetime greater than queue.
43 | }
   | -
   | |
   | `lower` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `QueueContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined
